tests/fixtures/invalid/str_bitor_str.py
# Cannot bitwise OR Str and Str
x: str = "hello" | "hello"
